--- a/sehat_in/static/css/styles.css
+++ b/sehat_in/static/css/styles.css
@@ -425,6 +425,10 @@ input[type=text]:focus {
     .tes__header {
         margin-top: 1rem !important;
     }
+
+    .artikel__link {
+        margin-top: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 350px) {
